opam-version: "2.0"
name: "satysfi-enumitem-doc"
version: "2.0.0"
synopsis: "A SATySFi package for creating itemized lists"
description: """A SATySFi package for creating itemized lists."""

maintainer: "Shinichi Mogami <mogassy@yahoo.co.jp>"
authors: "Shinichi Mogami <mogassy@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/monaqa/satysfi-enumitem"
bug-reports: "https://github.com/monaqa/satysfi-enumitem/issues"
dev-repo: "git+https://github.com/monaqa/satysfi-enumitem.git"

depends: [
  "satysfi" {>= "0.0.4" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist"
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "enumitem"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]

