opam-version: "2.0"
name: "satysfi-enumitem-doc"
version: "2.0.0"
synopsis: "A SATySFi package for creating itemized lists"
description: """A SATySFi package for creating itemized lists."""

maintainer: "Shinichi Mogami <mogassy@yahoo.co.jp>"
authors: "Shinichi Mogami <mogassy@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/monaqa/satysfi-enumitem"
bug-reports: "https://github.com/monaqa/satysfi-enumitem/issues"
dev-repo: "git+https://github.com/monaqa/satysfi-enumitem.git"

depends: [
  "satysfi" {>= "0.0.6" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-dist"
  "satysfi-enumitem" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "enumitem-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "enumitem-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]

